--- a/3d-chuyen-nghiep/index.html
+++ b/3d-chuyen-nghiep/index.html
@@ -2,6 +2,7 @@
 <html class="brk-preloader" lang="en" data-brk-skin="brk-blue.css">
 
 <head>
+	<meta charset="UTF-8">
 	<title>Khoá học thiết kế nhân vật và diễn xuất phim hoạt hình 3D - FullStack Vietnam</title>
 	<meta name="description" content="3D Art sẽ đem lại cho bạn có được những kỹ thuật thiết kế và kỹ thuật code cao nhất trong nghề, để không chỉ có thể thiết kế mọi thứ về đồ họa cực đẹp mà còn có thể xuất bản ra các trang web với đầy đủ hiệu ứng lẫn tương thích mọi thiết bị một cách chuyên nghiệp nhất.">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
@@ -161,6 +162,9 @@
 				padding-bottom: 12.5% !important
 			}
 		}
+		.brk-header-mobile-wrap__logo img, .brk-header-mobile__logo img {
+			max-width: 200px;
+		}
 	</style>
 	<div class="brk-header-mobile">
 		<div class="brk-header-mobile__open brk-header-mobile__open_white"><span></span></div>
@@ -176,7 +180,7 @@
 					<div class="col-lg order-2 ml-auto align-self-lg-stretch">
 						<nav class="brk-nav brk-header__item d-flex justify-content-md-end justify-content-start">
 							<ul class="brk-nav__menu">
-								<li class="brk-nav__children brk-nav__full-width"><a href="#top" data-brk-library="component__tabs"><span>Home</span></a>
+								<li class="brk-nav__children brk-nav__full-width"><a href="#top" data-brk-library="component__tabs"><span>3D</span></a>
 								</li>
 								<li class="brk-nav__children brk-nav__full-width brk-nav__drop-down-effect"><a href="#content"><span>NỘI DUNG</span></a>
 								</li>
@@ -184,7 +188,7 @@
 								</li>
 								<li class="brk-nav__children brk-nav__drop-down-effect"><a href="#review"><span>CẢM NHẬN HỌC VIÊN</span></a>
 								</li>
-								<li class="brk-nav__children brk-nav__drop-down-effect"><a href="#trend"><span>Xu hướng</span></a>
+								<li class="brk-nav__children brk-nav__drop-down-effect"><a href="#trend"><span>XU HƯỚNG</span></a>
 								</li>
 							</ul>
 						</nav>
@@ -198,78 +202,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="brk-info-menu">
-			<div class="brk-info-menu__bar">
-				<div class="brk-info-menu__header font__family-montserrat font__weight-bold font__size-21">More info <button class="brk-info-menu__close"><i
-						 class="fa fa-times" aria-hidden="true"></i></button></div>
-				<ul class="list-inline-7 mt-10 mb-10">
-					<li class="font__family-open-sans font__size-14"><a href="#">Our Features <span class="list-inline-7__before"><i
-								 class="fa fa-angle-right"></i></span></a>
-						<ul class="mt-10 mb-10">
-							<li class="font__family-open-sans font__size-14"><a href="#">Our Features <span class="list-inline-7__before"><i
-										 class="fa fa-angle-right"></i></span></a></li>
-							<li class="font__family-open-sans font__size-14"><a href="#">Our Clients <span class="list-inline-7__before"><i
-										 class="fa fa-angle-right"></i></span></a></li>
-						</ul>
-					</li>
-					<li class="font__family-open-sans font__size-14"><a href="#">Our Clients <span class="list-inline-7__before"><i
-								 class="fa fa-angle-right"></i></span></a></li>
-					<li class="font__family-open-sans font__size-14"><a href="#">Our News <span class="list-inline-7__before"><i class="fa fa-angle-right"></i></span></a></li>
-					<li class="font__family-open-sans font__size-14"><a href="#">Our Partners <span class="list-inline-7__before"><i
-								 class="fa fa-angle-right"></i></span></a></li>
-					<li class="font__family-open-sans font__size-14"><a href="#">Our History <span class="list-inline-7__before"><i
-								 class="fa fa-angle-right"></i></span></a></li>
-				</ul>
-				<div class="brk-info-menu__header font__family-montserrat font__weight-bold font__size-21">Our instagram</div>
-				<div class="default-slider dots-base-skin dots-base-color slick-loading mt-15" data-slick='{"slidesToShow": 1, "slidesToScroll": 1, "dots": true, "autoplay": false, "autoplaySpeed": 4000}'
-				 data-brk-library="slider__slick">
-					<div>
-						<div class="brk-header-slider">
-							<div class="brk-header-slider__img brk-base-box-shadow"><img src="img/309x206_1.jpg" alt="alt"></div>
-							<div class="brk-header-slider__content"><img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-								 data-src="img/head-icon.png" alt="alt">
-								<div class="brk-header-slider__content--title">
-									<h4 class="font__family-montserrat font__weight-bold font__size-16">@berserk</h4><span class="font__size-14">17
-										Hours ago</span>
-								</div>
-							</div>
-							<p class="brk-header-slider__text font__size-14 line__height-21">Aenean vulputate eleifend tellus. Aenean leo
-								ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra</p>
-						</div>
-					</div>
-					<div>
-						<div class="brk-header-slider">
-							<div class="brk-header-slider__img brk-base-box-shadow"><img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-								 data-src="img/309x206_2.jpg" alt="alt"></div>
-							<div class="brk-header-slider__content"><img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-								 data-src="img/head-icon.png" alt="alt">
-								<div class="brk-header-slider__content--title">
-									<h4 class="font__family-montserrat font__weight-bold font__size-16">@berserk</h4><span class="font__size-14">17
-										Hours ago</span>
-								</div>
-							</div>
-							<p class="brk-header-slider__text font__size-14 line__height-21">Aenean vulputate eleifend tellus. Aenean leo
-								ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra</p>
-						</div>
-					</div>
-					<div>
-						<div class="brk-header-slider">
-							<div class="brk-header-slider__img brk-base-box-shadow"><img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-								 data-src="img/309x206_3.jpg" alt="alt"></div>
-							<div class="brk-header-slider__content"><img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-								 data-src="img/head-icon.png" alt="alt">
-								<div class="brk-header-slider__content--title">
-									<h4 class="font__family-montserrat font__weight-bold font__size-16">@berserk</h4><span class="font__size-14">17
-										Hours ago</span>
-								</div>
-							</div>
-							<p class="brk-header-slider__text font__size-14 line__height-21">Aenean vulputate eleifend tellus. Aenean leo
-								ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+		
 	</header>
 	<div id="top"></div>
 	<div class="main-page">
@@ -595,6 +528,11 @@
 								<div class="text-center text-lg-left">
 									<h2 class="font__family-montserrat font__weight-bold font__size-56 line__height-60 mt-10" data-brk-library="component__title">
 										Thiết kế nhân vật 3D với Maya và Zbrush</h2>
+										<p>
+												<a href="https://fullstackvietnam.com/khoa-hoc-thiet-ke-nhan-vat-va-dien-xuat-phim-hoat-hinh-3d/" class="btn btn-inside-out btn-lg border-radius-25 btn-shadow ml-0 pl-50 pr-50"
+												data-brk-library="component__button"><span class="before">đăng ký học</span><span class="text">đăng ký học</span><span
+													class="after">đăng ký học</span></a>
+											</p>
 								</div>
 								<!-- <p class="brk-dark-font-color font__size-16 line__height-26 mt-45 mb-25 text-center text-lg-left">Aenean
 									vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem
@@ -608,6 +546,11 @@
 								<div class="text-center text-lg-left">
 									<h2 class="font__family-montserrat font__weight-bold font__size-56 line__height-60 mt-10" data-brk-library="component__title">Diễn
 										hoạt nhân vật (Animation)</h2>
+									<p>
+										<a href="https://fullstackvietnam.com/khoa-hoc-thiet-ke-nhan-vat-va-dien-xuat-phim-hoat-hinh-3d/" class="btn btn-inside-out btn-lg border-radius-25 btn-shadow ml-0 pl-50 pr-50"
+										data-brk-library="component__button"><span class="before">đăng ký học</span><span class="text">đăng ký học</span><span
+											class="after">đăng ký học</span></a>
+									</p>
 								</div>
 								<!-- <p class="brk-dark-font-color font__size-16 line__height-26 mt-45 mb-25 text-center text-lg-left">Aenean
 									vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem
@@ -621,6 +564,11 @@
 								<div class="text-center text-lg-left">
 									<h2 class="font__family-montserrat font__weight-bold font__size-56 line__height-60 mt-10" data-brk-library="component__title">Kỹ
 										thuật tạo tóc sợi bằng Shave and Haircut</h2>
+										<p>
+												<a href="https://fullstackvietnam.com/khoa-hoc-thiet-ke-nhan-vat-va-dien-xuat-phim-hoat-hinh-3d/" class="btn btn-inside-out btn-lg border-radius-25 btn-shadow ml-0 pl-50 pr-50"
+												data-brk-library="component__button"><span class="before">đăng ký học</span><span class="text">đăng ký học</span><span
+													class="after">đăng ký học</span></a>
+											</p>
 								</div>
 								<!-- <p class="brk-dark-font-color font__size-16 line__height-26 mt-45 mb-25 text-center text-lg-left">Aenean
 									vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem
@@ -634,6 +582,11 @@
 								<div class="text-center text-lg-left">
 									<h2 class="font__family-montserrat font__weight-bold font__size-56 line__height-60 mt-10" data-brk-library="component__title">
 										Kỹ thuật chuyển hướng lưới và hiệu chỉnh các tình huống lỗi</h2>
+										<p>
+												<a href="https://fullstackvietnam.com/khoa-hoc-thiet-ke-nhan-vat-va-dien-xuat-phim-hoat-hinh-3d/" class="btn btn-inside-out btn-lg border-radius-25 btn-shadow ml-0 pl-50 pr-50"
+												data-brk-library="component__button"><span class="before">đăng ký học</span><span class="text">đăng ký học</span><span
+													class="after">đăng ký học</span></a>
+											</p>
 								</div>
 								<!-- <p class="brk-dark-font-color font__size-16 line__height-26 mt-45 mb-25 text-center text-lg-left">Aenean
 									vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem
@@ -701,6 +654,12 @@
 								</div>
 								<h5 class="font__family-montserrat font__size-16 font__weight-bold progress__title">PhotoShop</h5>
 							</div>
+							<p class="mt-50">
+									<a href="https://fullstackvietnam.com/khoa-hoc-thiet-ke-nhan-vat-va-dien-xuat-phim-hoat-hinh-3d/" class="btn btn-inside-out btn-lg border-radius-25 btn-shadow ml-0 pl-50 pr-50"
+									data-brk-library="component__button"><span class="before">đăng ký học</span><span class="text">đăng ký học</span><span
+										class="after">đăng ký học</span></a>
+								</p>
+
 						</div>
 					</div>
 				</div>
@@ -896,8 +855,7 @@
 								 src="img/logobte.png" height="31" width="170" alt="logo"> </a><span class="brk-dashed-logo__line"></span></div>
 						<div class="brk-social-links brk-white-font-color brk-social-links_opacity d-flex justify-content-center mb-30 font__size-12"
 						 data-brk-library="component__social_links">
-						 <a href="https://www.facebook.com/fullstackvietnam/" class="brk-social-links__item"><i
-								 class="fab fa-facebook"></i></a></div>
+							<a href="https://www.facebook.com/fullstackvietnam/" class="brk-social-links__item"><i class="fab fa-facebook"></i></a></div>
 						<div class="brk-footer__rights pt-15 pb-25 text-center">
 							<p class="font__family-open-sans font__size-14 font__weight-normal line__height-14">© 2018 <span class="brk-white-font-color pl-1 pr-1 font__weight-bold">FullStack
 									VietNam</span> All rights reserved</p>
