--- a/video/index.html
+++ b/video/index.html
@@ -2,7 +2,7 @@
 <html class="brk-preloader" lang="en" data-brk-skin="brk-red-demo.css">
 
 <head>
-	<title>FullStack Vietnam</title>
+	<title>Neta VietNam</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,maximum-scale=1">
 	<meta name="format-detection" content="telephone=no">
