Complete Edit Pl

--- a/3d-chuyen-nghiep/index.html
+++ b/3d-chuyen-nghiep/index.html
@@ -731,29 +731,12 @@
 												của Netavietnam.</div>
 										</div>
 									</div>
-									<!-- <div class="swiper-slide">
-										<div class="brk-testimonials-dash-one">
-											<div class="brk-testimonials-dash-one__info">
-												<div class="brk-testimonials-dash-one__img"><img src="img/clients_2.jpg" alt="alt"></div>
-												<div class="brk-rating" data-brk-library="component__elements">
-													<div class="brk-rating__layer"><i class="fal fa-star brk-dark-font-color"></i> <i class="fal fa-star brk-dark-font-color"></i>
-														<i class="fal fa-star brk-dark-font-color"></i> <i class="fal fa-star brk-dark-font-color"></i> <i class="fal fa-star brk-dark-font-color"></i></div>
-													<div class="brk-rating__imposition" style="width: 98%">
-														<div class="visible"><i class="fas fa-star brk-base-font-color"></i> <i class="fas fa-star brk-base-font-color"></i>
-															<i class="fas fa-star brk-base-font-color"></i> <i class="fas fa-star brk-base-font-color"></i> <i class="fas fa-star brk-base-font-color"></i></div>
-													</div>
-												</div>
-												<h4 class="font__family-montserrat font__weight-bold">Hữu Cường2</h4>
-											</div>
-											<div class="brk-testimonials-dash-one__description font__family-open-sans text-center text-lg-left">Cảm ơn thầy đã truyền lửa và đam mê cho tụi em. Tạo cho tụi em nhiều cơ hội củng như các khoá học và cách dạy PRO của thầy. Chúc thành luôn thành công trong cuộc sống và những dự định trong tương lai. Tự hào là thành viên của Fullstackvietnam.</div>
-										</div>
-									</div> -->
 								</div>
 								<div class="swiper-modern-arrow">
 									<div class="button-prev"><i class="fa fa-angle-left"></i></div>
 									<div class="button-next"><i class="fa fa-angle-right"></i></div>
 								</div><button class="brk-testimonials-dash-one__btn btn btn-lg border-radius-25 font__family-open-sans font__weight-bold btn-inside-out"><span
-									 class="before">Cảm nhận</span> <span class="text"><a href="https://neta.edu.vn">Cảm
+									 class="before">Cảm nhận</span> <span class="text"><a href="/cam-nhan-hoc-vien">Cảm
 											nhận</a></span> <span class="after">Cảm nhận</span></button>
 							</div>
 						</div>
