--- a/web-developer/index.html
+++ b/web-developer/index.html
@@ -212,7 +212,7 @@
                                             viết một trang web theo bất cứ mong đợi nào.
 
                                         </h1>
-                                        <a href="https://neta.edu.vn/" class="cta__action btn">Về chúng tôi</a>
+                                        <a href="https://neta.edu.vn/ve-neta" class="cta__action btn">Về chúng tôi</a>
                                     </div>
                                 </div>
                             </div>
@@ -399,14 +399,14 @@
                                     <nav class="links">
                                         <ul class="links__list">
                                             <li class="links__item">
-                                                <a href="tel:+84969689893">(+84) 888.911.880</a>
+                                                <a href="tel:+849888911880">(+84) 888.911.880</a>
                                             </li>
                                         </ul>
                                     </nav>
                                 </div>
                                 <div class="col-sm-6 col-lg-3">
                                     <div class="footer__socials socials">
-                                        <a href="https://www.facebook.com/pham.nguyen.bao.nguyen" class="socials__item socials__item--fb" target="_blank" rel="nofollow">
+                                        <a href="https://www.facebook.com/netavietnam/" class="socials__item socials__item--fb" target="_blank" rel="nofollow">
                                             <i class="ico ico-fb"></i>
                                         </a>
 
