Complete Edit Pl

--- a/3d-chuyen-nghiep/index.html
+++ b/3d-chuyen-nghiep/index.html
@@ -230,7 +230,7 @@
 							 data-actions="" data-responsive_offset="on" data-frames='[{"delay":"+0","speed":1000,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":1000,"frame":"999","to":"auto:auto;","ease":"Power3.easeInOut"}]'
 							 data-margintop="[0,0,0,0]" data-marginright="[0,0,0,0]" data-marginbottom="[0,0,0,0]" data-marginleft="[0,0,0,0]"
 							 data-textalign="['center','center','center','center']" data-paddingtop="[22,22,22,22]" data-paddingright="[0,0,0,0]"
-							 data-paddingbottom="[22,22,22,22]" data-paddingleft="[0,0,0,0]" style="z-index: 17; min-width: 60px; max-width: 60px; max-width: 60px; max-width: 60px; white-space: nowrap; font-size: 16px; line-height: 16px; font-weight: 400; color: #2775ff; letter-spacing: ;font-family:Raleway;background-color:rgb(255,255,255);border-radius:50px 50px 50px 50px;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i
+							 data-paddingbottom="[22,22,22,22]" data-paddingleft="[0,0,0,0]" style="z-index: 17; min-width: 60px; max-width: 60px; max-width: 60px; max-width: 60px; white-space: nowrap; font-size: 16px; line-height: 16px; font-weight: 400; color: #2775ff;font-family:Raleway;background-color:rgb(255,255,255);border-radius:50px 50px 50px 50px;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i
 								 class="fa-icon-play"></i></a>
 							<div class="tp-caption" id="slide-49-layer-20" data-x="['left','left','left','left']" data-hoffset="['104','104','104','103']"
 							 data-y="['middle','middle','middle','middle']" data-voffset="['-14','-14','-14','-14']" data-width="none"
