Edit Info Design

--- a/khoa-dohoa/index.html
+++ b/khoa-dohoa/index.html
@@ -77,7 +77,7 @@ baonguyenyam.blogspot.com
     <meta itemprop="name" content="Ace Design - Đào tạo thiết kế chuyên nghiệp">
     <meta itemprop="description" content="Designer không chỉ hiểu về UI/UX hay thẩm mỹ là đủ mà còn đòi hỏi hiểu sâu về balancing, thiết kế Web, App, bộ nhận dạng thương hiệu, sáng tạo logo… ngoài ra còn phả nhận biết LỗI và TạO lỖi trong thiết kế như: Tiếng Nhật trong thiết kế, Con chữ, Icon, Lưới, Bất đồng bộ, Behavior, Framework & UI Kit, hay thậm chí là cách phá cách trong qui chuẩn, Testing layout, Animation & Cutting Layout, Z, H, I, L, F, E…  Tất cả để được là bậc thầy về thiết kế">
     <meta itemprop="image" content="https://fullstackvietnam.com/design-chuyen-nghiep/img/background_img_01b.jpg">
-    <title>Ace Design - Đào tạo thiết kế chuyên nghiệp - 0969689893 - pham.nguyen.bao.nguyen</title>
+    <title>Ace Design - Đào tạo thiết kế chuyên nghiệp - 0888911880</title>
     <link rel="stylesheet" type="text/css" href="css/clear.min.css">
     <link rel="stylesheet" type="text/css" href="css/common.min.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
@@ -450,16 +450,16 @@ baonguyenyam.blogspot.com
             </p>
             <ul>
                 <li class="social-footer">
-                    <a href="https://fb.com/pham.nguyen.bao.nguyen" target="_blank">
+                    <a href="https://fb.com/netavietnam" target="_blank">
                         <span class="fa fa-facebook"></span>
                     </a>
-                    <a href="sms:0969689893">
+                    <a href="sms:088809110880 ">
                         <span class="fa fa-comments"></span>
                     </a>
-                    <a href="https://zalo.me/0969689893" target="_blank">
+                    <a href="https://zalo.me/088809110880" target="_blank">
                         <span class="fa fa-comment"></span>
                     </a>
-                    <a href="tel:+84-0969689893">
+                    <a href="tel:+84-088809110880">
                         <span class="fa fa-phone"></span>
                     </a>
                 </li>
