--- a/video/index.html
+++ b/video/index.html
@@ -114,7 +114,7 @@
 						 data-fontsize="['80','80','80','50']" data-lineheight="['136','110','80','50']" data-width="none" data-height="none"
 						 data-whitespace="nowrap" data-type="text" data-responsive_offset="on" data-frames='[{"delay":10,"split":"chars","splitdelay":0.05,"speed":1800,"split_direction":"middletoedge","frame":"0","from":"y:[-100%];z:0;rZ:35deg;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","to":"o:1;","ease":"Power4.easeInOut"},{"delay":"wait","speed":800,"frame":"999","to":"rZ:0deg;sX:0.7;sY:0.7;opacity:0;","mask":"x:0;y:0;s:inherit;e:inherit;","ease":"Back.easeIn"}]'
 						 data-textalign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
-						 data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 10; white-space: nowrap; font-size: 136px; line-height: 136px; font-weight: 700; color: #000000; letter-spacing: 0px;font-family:Montserrat Alternates;text-transform:uppercase;">FullStack</div>
+						 data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 10; white-space: nowrap; font-size: 136px; line-height: 136px; font-weight: 700; color: #000000; letter-spacing: 0px;font-family:Montserrat Alternates;text-transform:uppercase;">Neta</div>
 					</li>
 					<li data-index="rs-209" data-transition="slideoverright" data-slotamount="default" data-hideafterloop="0"
 					 data-hideslideonmobile="off" data-easein="default" data-easeout="default" data-masterspeed="1800" data-thumb="img/demo_art/images/100x50_65f1b-1920x1320_1.jpg"
@@ -360,7 +360,7 @@
 							</div>
 							<div class="swiper-slide">
 								<div class="brk-testimonials-dash-six__item font__family-oxygen">
-									<div class="brk-testimonials-dash-six__comment font__weight-light">Nhờ có khóa học này mình mới học hỏi được nhiều thứ mà mình chưa được học! Thầy dạy bằng cả con tim, niềm nhiệt huyết và đam mê đốt thành 1 ngọc lửa cháy rực. Và thầy đã và đang truyền hết ngọn lửa đó cho tất cả các bạn đang theo học tại lớp FullStack! Tuy khóa học chỉ vỏn vẹn có 2 tháng, nhưng mình tin đây là nền tảng vững chắc khi đi làm và làm việc sau này! Cảm ơn thầy rất nhiều!</div>
+									<div class="brk-testimonials-dash-six__comment font__weight-light">Nhờ có khóa học này mình mới học hỏi được nhiều thứ mà mình chưa được học! Thầy dạy bằng cả con tim, niềm nhiệt huyết và đam mê đốt thành 1 ngọc lửa cháy rực. Và thầy đã và đang truyền hết ngọn lửa đó cho tất cả các bạn đang theo học tại lớp Neta! Tuy khóa học chỉ vỏn vẹn có 2 tháng, nhưng mình tin đây là nền tảng vững chắc khi đi làm và làm việc sau này! Cảm ơn thầy rất nhiều!</div>
 									<div class="brk-testimonials-dash-six__photo lazyload" data-bg="img/120x120_2.jpg"></div>
 									<div class="brk-testimonials-dash-six__name font__weight-bold">Vo Duc Manh</div>
 								</div>
@@ -875,25 +875,23 @@
 							<hr class="horiz-line mt-0">
 							<div class="brk-social-links brk-social-links_rounded brk-white-font-color mb-25 d-flex justify-content-center justify-content-sm-start"
 							 data-brk-library="component__social_links">
-							 <a
-							 href="https://github.com/fullstackvietnam" class="brk-social-links__item"><i class="fab fa-github"></i> </a><a href="https://facebook.com/fullstackvietnam" class="brk-social-links__item"><i
+							 <a href="https://facebook.com/netavietnam" class="brk-social-links__item"><i
 								 class="fab fa-facebook-f"></i> </a>
 								 <a href="https://www.youtube.com/channel/UCDE07F201JtIEP4tdAELtfQ/featured" class="brk-social-links__item"><i class="fab fa-youtube"></i> </a></div>
 							<hr class="horiz-line mt-0 mb-35">
 							<p class="font__size-36 mb-40 text-sm-left text-center"><a href="#" class="brk-white-font-color font__family-open-sans font__weight-light line__height-36" style="font-size: 1.85rem">(+84) 888 911 880</a></p>
 							<p class="font__family-open-sans font__weight-bold font__size-14 mb-10 brk-white-font-color text-sm-left text-center"><i
-								 class="brk-footer-icon text-middle fa fa-envelope line__height-24"></i> <a href="mailto:info@domain.com" class="show-inline-block">admin@fullstackvietnam.com</a></p>
+								 class="brk-footer-icon text-middle fa fa-envelope line__height-24"></i> <a href="mailto:info@domain.com" class="show-inline-block">admin@neta.edu.vn</a></p>
 							<p class="font__family-open-sans font__weight-bold font__size-14 mb-10 brk-white-font-color text-sm-left text-center"><i
 								 class="brk-footer-icon text-middle fas fa-map-marker-alt line__height-24 mb-20"></i> <span>28 đường số 2 – CITY LAND – Phường 7 – Gò Vấp – HCM</span></p>
 						</div>
 					</div>
 					<hr class="horiz-line mt-750 mb-20">
 					<div class="d-flex align-items-center justify-content-sm-between justify-content-center flex-wrap mb-25">
-						<p class="brk-dark-font-color font__family-open-sans font__size-14 mr-15">© 2018 FullStack VietNam All rights reserved</p>
-						<div class="brk-social-links brk-dark-font-color font__size-14" data-brk-library="component__social_links"><a
-							 href="https://github.com/fullstackvietnam" class="brk-social-links__item"><i class="fab fa-github"></i> </a><a href="https://facebook.com/fullstackvietnam" class="brk-social-links__item"><i
+						<p class="brk-dark-font-color font__family-open-sans font__size-14 mr-15">© 2018 Neta VietNam All rights reserved</p>
+						<div class="brk-social-links brk-dark-font-color font__size-14" data-brk-library="component__social_links"><a href="https://facebook.com/netavietnam" class="brk-social-links__item"><i
 								 class="fab fa-facebook-f"></i> </a>
-								 <a href="https://www.youtube.com/channel/UCDE07F201JtIEP4tdAELtfQ/featured" class="brk-social-links__item"><i class="fab fa-youtube"></i> </a></div>
+								 </div>
 					</div>
 				</div>
 			</div>
