update logo neta

--- a/net/index.html
+++ b/net/index.html
@@ -29,9 +29,9 @@
 	<div class="main-page">
 		<div class="brk-header-mobile">
 			<div class="brk-header-mobile__open"><span></span></div>
-			<div class="brk-header-mobile__logo"><a href="#"><img class="brk-header-mobile__logo-1 lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="img/logo-dark-2.png" alt="alt"> <img class="brk-header-mobile__logo-2 lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="img/logo-dark-2.png" alt="alt"></a></div>
+			<div class="brk-header-mobile__logo"><a href="#"><img class="brk-header-mobile__logo-1 lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="favicon.ico" alt="alt"> <img class="brk-header-mobile__logo-2 lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="favicon.ico" alt="alt"></a></div>
 		</div>
-		<header class="brk-header brk-header_vertical brk-header_style-1 brk-header_color-dark brk-header_skin-1 position-fixed" data-logo-src="img/logo-dark-2.png" data-bg-mobile="img/brk-bg-mobile-menu.jpg" data-brk-library="component__header">
+		<header class="brk-header brk-header_vertical brk-header_style-1 brk-header_color-dark brk-header_skin-1 position-fixed" data-logo-src="favicon.ico" data-bg-mobile="img/brk-bg-mobile-menu.jpg" data-brk-library="component__header">
 			<div class="brk-header__main-bar bg-white brk-base-box-shadow" style="height: 68px;">
 				<div class="row justify-content-lg-center">
 					<div class="col-lg-auto">
